MIT-110: Fix alignment of menu to the right.

--- a/components/menu/headerMenu.css
+++ b/components/menu/headerMenu.css
@@ -3,4 +3,5 @@
 .list {
   display: flex;
   flex-flow: row nowrap;
+  justify-content: flex-end;
 }
